--- a/OB-BE-dotnet/OB-BE-dotnet.csproj
+++ b/OB-BE-dotnet/OB-BE-dotnet.csproj
@@ -5,5 +5,11 @@
     <RootNamespace>OB_BE_dotnet</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
+  </ItemGroup>
+
 
 </Project>
